SUBDIRS = generic meshes poisson unsteady_heat advection_diffusion \
linear_wave  linear_elasticity navier_stokes \
axisym_navier_stokes polar_navier_stokes \
spherical_navier_stokes fluid_interface  \
constitutive solid axisym_spherical_solid beam shell multi_physics \
womersley advection_diffusion_reaction spherical_advection_diffusion \
axisym_advection_diffusion biharmonic \
flux_transport young_laplace steady_axisym_advection_diffusion \
mesh_smoothing helmholtz time_harmonic_linear_elasticity rigid_body \
time_harmonic_fourier_decomposed_linear_elasticity \
fourier_decomposed_helmholtz\
foeppl_von_karman \
axisym_foeppl_von_karman \
pml_helmholtz \
axisym_linear_elasticity \
pml_fourier_decomposed_helmholtz \
darcy \
ode \
poroelasticity \
axisym_poroelasticity \
pml_time_harmonic_linear_elasticity \
axisym_displ_based_foeppl_von_karman \
linearised_axisym_navier_stokes \
generalised_newtonian_navier_stokes \
generalised_newtonian_axisym_navier_stokes

